--- a/accessibility/fix-a11y/08-index.html
+++ b/accessibility/fix-a11y/08-index.html
@@ -155,7 +155,7 @@
               <form action="#" method="post">
                 <div class="input-group">
                   <label class="visually-hidden" for="email"></label>
-                  <input class="form-control" id="email" type="email" name="email" autocomplete="email" required aria-required="true">
+                  <input class="form-control" type="email" name="email" id="email" autocomplete="email" required aria-required="true">
                   <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
                 </div>
               </form>
